<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/join_game_fragment">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:text="@string/join_game"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:text="@string/players"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/player_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:text="@string/choose_color"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/color_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/join_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join"/>
        <Button
            android:id="@+id/join_cancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>