<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/red_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/orange_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/orange"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/yellow_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/green_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/blue_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/purple_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/purple"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/white_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/black_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/wild_cardCount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/wild"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:context="com.familymapclient.activities.MainActivity"></fragment>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/draw_cards_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/draw_cards"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/select_destinations_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/purple"
                    android:text="@string/select_destinations"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/claim_route_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/claim_route"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/histoy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:text="Chat/History"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/stats_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="Stats"
                    android:textColor="@color/white" />
                <!--<Button-->
                <!--android:id="@+id/test_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/black"-->
                <!--android:text="Change Turn\n Test Button"-->
                <!--android:textColor="@color/white" />-->
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>